--- a/src/org/device/demo/GSXJavaFX.fxml
+++ b/src/org/device/demo/GSXJavaFX.fxml
@@ -31,7 +31,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <Button layoutX="557.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Open" />
+                              <Button layoutX="557.0" layoutY="8.0" mnemonicParsing="false" onAction="#fiscalDocumentOpen" prefHeight="25.0" prefWidth="73.0" text="Open" />
                               <Separator layoutX="4.0" layoutY="43.0" prefHeight="4.0" prefWidth="631.0" />
                               <Label layoutX="14.0" layoutY="45.0" prefHeight="15.0" prefWidth="73.0" text="Item Name" />
                               <TextField fx:id="tfFTestItemName" layoutX="13.0" layoutY="61.0" prefHeight="25.0" prefWidth="236.0" />
@@ -41,17 +41,9 @@
                               <Label layoutX="387.0" layoutY="45.0" text="Price" />
                               <Label layoutX="486.0" layoutY="45.0" prefHeight="15.0" prefWidth="45.0" text="Tax %" />
                               <TextField fx:id="tfFTestTax" layoutX="486.0" layoutY="61.0" prefHeight="23.0" prefWidth="45.0" />
-                              <MenuButton layoutX="162.0" layoutY="115.0" mnemonicParsing="false" text="Item Type">
-                                <items>
-                                  <MenuItem mnemonicParsing="false" text="Sale" />
-                                  <MenuItem mnemonicParsing="false" text="Bottle Discount" />
-                                    <MenuItem mnemonicParsing="false" text="Item Discount" />
-                                    <MenuItem mnemonicParsing="false" text="Item Recharge" />
-                                </items>
-                              </MenuButton>
                               <Label layoutX="293.0" layoutY="98.0" text="Extra Description " />
                               <TextField layoutX="294.0" layoutY="115.0" prefHeight="25.0" prefWidth="240.0" />
-                              <Button layoutX="555.0" layoutY="211.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Send" />
+                              <Button layoutX="555.0" layoutY="211.0" mnemonicParsing="false" onAction="#fiscalDocumentSend" prefHeight="25.0" prefWidth="73.0" text="Send" />
                               <Separator layoutX="13.0" layoutY="244.0" prefHeight="0.0" prefWidth="615.0" />
                               <Button layoutX="14.0" layoutY="257.0" mnemonicParsing="false" text="SubTotal" />
                               <Button layoutX="557.0" layoutY="285.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Cancel" />
@@ -68,7 +60,7 @@
                               <TextField layoutX="440.0" layoutY="257.0" prefHeight="25.0" prefWidth="73.0" />
                               <Label layoutX="393.0" layoutY="256.0" text="Paid" />
                               <Label layoutX="392.0" layoutY="268.0" text="Amount" />
-                              <Button layoutX="557.0" layoutY="318.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="To Finalize" />
+                              <Button layoutX="557.0" layoutY="318.0" mnemonicParsing="false" onAction="#fiscalDocumentClose" prefHeight="25.0" prefWidth="73.0" text="To Finalize" />
                               <CheckBox fx:id="cbFTestTaxable" layoutX="562.0" layoutY="65.0" mnemonicParsing="false" text="Taxable" />
                               <CheckBox layoutX="14.0" layoutY="168.0" mnemonicParsing="false" text="Other tax fixed" />
                               <CheckBox layoutX="145.0" layoutY="168.0" mnemonicParsing="false" text="Amount" />
@@ -76,13 +68,17 @@
                               <CheckBox layoutX="339.0" layoutY="168.0" mnemonicParsing="false" text="T.AjustNeto" />
                               <CheckBox layoutX="440.0" layoutY="168.0" mnemonicParsing="false" text="\% Neto" />
                               <CheckBox layoutX="525.0" layoutY="168.0" mnemonicParsing="false" text="Non other tax" />
-                              <TextField layoutX="145.0" layoutY="186.0" prefHeight="25.0" prefWidth="81.0" />
+                              <TextField fx:id="tfFTestAmount" layoutX="145.0" layoutY="186.0" prefHeight="25.0" prefWidth="81.0" />
                               <TextField layoutX="236.0" layoutY="186.0" prefHeight="25.0" prefWidth="94.0" />
                               <TextField layoutX="340.0" layoutY="186.0" prefHeight="25.0" prefWidth="87.0" />
                               <TextField layoutX="442.0" layoutY="186.0" prefHeight="25.0" prefWidth="67.0" />
                               <TextField layoutX="88.0" layoutY="258.0" prefHeight="25.0" prefWidth="66.0" />
                               <ChoiceBox fx:id="cbFTestOperationType" layoutX="12.0" layoutY="115.0" prefHeight="25.0" prefWidth="132.0" />
                               <Label layoutX="14.0" layoutY="98.0" text="Operation Type" />
+                              <Label layoutX="159.0" layoutY="98.0" text="Item Type" />
+                              <ChoiceBox fx:id="cbFTestItemType" layoutX="157.0" layoutY="115.0" prefHeight="25.0" prefWidth="124.0" />
+                              <ChoiceBox fx:id="cbFTestDocumentType" layoutX="402.0" layoutY="8.0" prefWidth="150.0" />
+                              <Label layoutX="316.0" layoutY="12.0" text="Document type" />
                            </children></AnchorPane>
                     </content>
                   </Tab>
