--- a/src/org/device/demo/GSXJavaFX.fxml
+++ b/src/org/device/demo/GSXJavaFX.fxml
@@ -36,7 +36,7 @@
                               <Label layoutX="14.0" layoutY="45.0" prefHeight="15.0" prefWidth="73.0" text="Item Name" />
                               <TextField fx:id="tfFTestItemName" layoutX="13.0" layoutY="61.0" prefHeight="25.0" prefWidth="236.0" />
                               <TextField fx:id="tfFTestQuantity" layoutX="283.0" layoutY="61.0" prefHeight="23.0" prefWidth="54.0" />
-                              <TextField fx:id="tfFTestPrice" layoutX="367.0" layoutY="61.0" prefHeight="23.0" prefWidth="53.0" />
+                              <TextField fx:id="tfFTestPriceAmount" layoutX="367.0" layoutY="61.0" prefHeight="23.0" prefWidth="53.0" />
                               <Label layoutX="283.0" layoutY="45.0" text="Quantity" />
                               <Label layoutX="367.0" layoutY="45.0" text="Price" />
                               <Label layoutX="448.0" layoutY="45.0" prefHeight="15.0" prefWidth="45.0" text="Tax %" />
@@ -68,7 +68,7 @@
                               <CheckBox disable="true" layoutX="339.0" layoutY="168.0" mnemonicParsing="false" text="T.AjustNeto" />
                               <CheckBox disable="true" layoutX="440.0" layoutY="168.0" mnemonicParsing="false" text="\% Neto" />
                               <CheckBox disable="true" layoutX="525.0" layoutY="168.0" mnemonicParsing="false" text="Non other tax" />
-                              <TextField fx:id="tfFTestAmount" layoutX="145.0" layoutY="186.0" prefHeight="25.0" prefWidth="81.0" />
+                              <TextField fx:id="tfFTestInternalAmount" layoutX="145.0" layoutY="186.0" prefHeight="25.0" prefWidth="81.0" />
                               <TextField disable="true" layoutX="236.0" layoutY="186.0" prefHeight="25.0" prefWidth="94.0" />
                               <TextField disable="true" layoutX="340.0" layoutY="186.0" prefHeight="25.0" prefWidth="87.0" />
                               <TextField disable="true" layoutX="442.0" layoutY="186.0" prefHeight="25.0" prefWidth="67.0" />
