--- a/src/org/device/demo/GSXJavaFX2.fxml
+++ b/src/org/device/demo/GSXJavaFX2.fxml
@@ -100,20 +100,8 @@
                                     <Font name="System Bold" size="12.0" />
                                  </font>
                               </Button>
-                              <MenuButton fx:id="cbFTestSubtotalOption" layoutX="396.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="160.0" text="Printing options">
-                                 <items>
-                                    <MenuItem mnemonicParsing="false" text="Print subtotal" />
-                                    <MenuItem mnemonicParsing="false" text="No printing" />
-                                 </items>
-                              </MenuButton>
                               <Separator layoutX="-1.0" layoutY="400.0" prefHeight="3.0" prefWidth="685.0" />
                               <Label layoutX="295.0" layoutY="239.0" prefHeight="17.0" prefWidth="101.0" text="Amount" />
-                              <MenuButton fx:id="cbFTestGeneralAddOperation" layoutX="396.0" layoutY="242.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="158.0" text="General Discount Recharge Operation" wrapText="true">
-                                 <items>
-                                    <MenuItem mnemonicParsing="false" text="Add Operation" />
-                                    <MenuItem mnemonicParsing="false" text="Void Operation" />
-                                 </items>
-                              </MenuButton>
                               <TextField fx:id="tfFTestRechargeDiscountAmount" layoutX="294.0" layoutY="259.0" prefHeight="25.0" prefWidth="88.0" />
                               <TextField fx:id="tfFTestRechargeDiscountName" layoutX="14.0" layoutY="259.0" prefHeight="25.0" prefWidth="269.0" />
                               <Label layoutX="14.0" layoutY="239.0" text="General Discount/Recharge Name" />
@@ -129,6 +117,10 @@
                               <Label layoutX="279.0" layoutY="118.0" text="Qualifier Price Type" />
                               <ChoiceBox fx:id="cbFTestQualifierOperation" layoutX="419.0" layoutY="137.0" prefHeight="25.0" prefWidth="133.0" />
                               <Label layoutX="419.0" layoutY="118.0" text="Qualifier Operation" />
+                              <Label layoutX="396.0" layoutY="352.0" text="Printing options" />
+                              <ChoiceBox fx:id="cbFTestSubtotalOption" layoutX="396.0" layoutY="367.0" prefHeight="25.0" prefWidth="160.0" />
+                              <Label layoutX="395.0" layoutY="239.0" text="Recharge Operation" />
+                              <ChoiceBox fx:id="cbFTestGeneralAddOperation" layoutX="396.0" layoutY="259.0" prefHeight="25.0" prefWidth="157.0" />
                            </children>
 						</AnchorPane>
                     </content>
