--- a/src/org/device/demo/GSXJavaFX2.fxml
+++ b/src/org/device/demo/GSXJavaFX2.fxml
@@ -81,13 +81,6 @@
                               </Button>
                               <Separator layoutY="236.0" prefHeight="3.0" prefWidth="685.0" />
                               <Separator layoutY="290.0" prefHeight="1.0" prefWidth="683.0" />
-                              <MenuButton fx:id="cbFTestTenderOperation" layoutX="396.0" layoutY="317.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="160.0" text="Tender Operation">
-                                 <items>
-                                    <MenuItem mnemonicParsing="false" text="Payment Total/Partial" />
-                                    <MenuItem mnemonicParsing="false" text="Cancel" />
-                                    <MenuItem mnemonicParsing="false" text="Pay Back" />
-                                 </items>
-                              </MenuButton>
                               <Label layoutX="295.0" layoutY="300.0" prefHeight="17.0" prefWidth="101.0" text="Payment Amount" />
                               <Button layoutX="260.0" layoutY="8.0" mnemonicParsing="false" onAction="#actionSetCustomerData" prefHeight="46.0" prefWidth="106.0" text="Set Customer Data" textFill="#002202" wrapText="true">
                                  <font>
@@ -121,6 +114,8 @@
                               <ChoiceBox fx:id="cbFTestSubtotalOption" layoutX="396.0" layoutY="367.0" prefHeight="25.0" prefWidth="160.0" />
                               <Label layoutX="395.0" layoutY="239.0" text="Recharge Operation" />
                               <ChoiceBox fx:id="cbFTestGeneralAddOperation" layoutX="396.0" layoutY="259.0" prefHeight="25.0" prefWidth="157.0" />
+                              <Label layoutX="395.0" layoutY="300.0" text="Tender Operation" />
+                              <ChoiceBox fx:id="cbFTestTenderOperation" layoutX="395.0" layoutY="317.0" prefHeight="25.0" prefWidth="159.0" />
                            </children>
 						</AnchorPane>
                     </content>
