--- a/src/org/device/demo/MenuClient.fxml
+++ b/src/org/device/demo/MenuClient.fxml
@@ -5,20 +5,20 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.device.demo.DocOptionsController">
    <children>
       <Label layoutX="144.0" layoutY="6.0" text="Document Options" textFill="#249a0d">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <MenuButton layoutX="75.0" layoutY="60.0" mnemonicParsing="false" text="Type">
+      <MenuButton layoutX="49.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Type">
         <items>
           <MenuItem mnemonicParsing="false" text="A" />
           <MenuItem mnemonicParsing="false" text="B/C" />
         </items>
       </MenuButton>
-      <MenuButton layoutX="233.0" layoutY="60.0" mnemonicParsing="false" text="Condition Tax">
+      <MenuButton layoutX="195.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="164.0" text="Condition Tax">
         <items>
           <MenuItem mnemonicParsing="false" text=" I. Enrolled Responsible" />
           <MenuItem mnemonicParsing="false" text=" N : Responsible not registered" />
@@ -30,7 +30,7 @@
             <MenuItem mnemonicParsing="false" text="T : Not categorized " />
         </items>
       </MenuButton>
-      <MenuButton layoutX="34.0" layoutY="91.0" mnemonicParsing="false" text="Document">
+      <MenuButton layoutX="48.0" layoutY="91.0" mnemonicParsing="false" text="Document">
         <items>
           <MenuItem mnemonicParsing="false" text="CUIT" />
           <MenuItem mnemonicParsing="false" text="CUIL" />
@@ -39,16 +39,16 @@
             <MenuItem mnemonicParsing="false" text="PASSPORT" />
         </items>
       </MenuButton>
-      <Label layoutX="187.0" layoutY="95.0" text="Number" />
-      <TextField layoutX="224.0" layoutY="91.0" />
+      <Label layoutX="165.0" layoutY="95.0" text="Number" />
+      <TextField layoutX="211.0" layoutY="91.0" />
       <TextField layoutX="14.0" layoutY="138.0" prefHeight="23.0" prefWidth="155.0" />
       <TextField layoutX="195.0" layoutY="138.0" prefHeight="23.0" prefWidth="164.0" />
-      <Button layoutX="291.0" layoutY="181.0" mnemonicParsing="false" text="Send Client" />
+      <Button layoutX="277.0" layoutY="179.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Send Client" />
       <Label layoutX="14.0" layoutY="123.0" text="Name" />
       <Label layoutX="195.0" layoutY="123.0" text="Address" />
-      <CheckBox layoutX="8.0" layoutY="30.0" mnemonicParsing="false" text="Bill" />
-      <CheckBox layoutX="97.0" layoutY="30.0" mnemonicParsing="false" text="Receipt" />
-      <CheckBox layoutX="190.0" layoutY="30.0" mnemonicParsing="false" text="Debit Note" />
-      <CheckBox layoutX="277.0" layoutY="30.0" mnemonicParsing="false" text="Credit Note" />
+      <CheckBox fx:id="cbBill" layoutX="8.0" layoutY="30.0" mnemonicParsing="false" text="Bill" />
+      <CheckBox fx:id="cbReceipt" layoutX="97.0" layoutY="30.0" mnemonicParsing="false" text="Receipt" />
+      <CheckBox fx:id="cbDebitNote" layoutX="190.0" layoutY="30.0" mnemonicParsing="false" text="Debit Note" />
+      <CheckBox fx:id="cbCreditNote" layoutX="277.0" layoutY="30.0" mnemonicParsing="false" text="Credit Note" />
    </children>
 </Pane>
