--- a/src/org/device/demo/MenuClient.fxml
+++ b/src/org/device/demo/MenuClient.fxml
@@ -7,48 +7,22 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.device.demo.DocOptionsController">
    <children>
-      <Label layoutX="144.0" layoutY="6.0" text="Document Options" textFill="#249a0d">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <MenuButton layoutX="49.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Type">
-        <items>
-          <MenuItem mnemonicParsing="false" text="A" />
-          <MenuItem mnemonicParsing="false" text="B/C" />
-        </items>
-      </MenuButton>
-      <MenuButton layoutX="195.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="164.0" text="Condition Tax">
-        <items>
-          <MenuItem mnemonicParsing="false" text=" I. Enrolled Responsible" />
-          <MenuItem mnemonicParsing="false" text=" N : Responsible not registered" />
-            <MenuItem mnemonicParsing="false" text=" E : Exempt" />
-            <MenuItem mnemonicParsing="false" text="A: Not Responsible" />
-            <MenuItem mnemonicParsing="false" text="B: Head not registered" />
-            <MenuItem mnemonicParsing="false" text="M : Responsible monotributo" />
-            <MenuItem mnemonicParsing="false" text="S : social Monotribustista" />
-            <MenuItem mnemonicParsing="false" text="T : Not categorized " />
-        </items>
-      </MenuButton>
-      <MenuButton layoutX="48.0" layoutY="91.0" mnemonicParsing="false" text="Document">
-        <items>
-          <MenuItem mnemonicParsing="false" text="CUIT" />
-          <MenuItem mnemonicParsing="false" text="CUIL" />
-            <MenuItem mnemonicParsing="false" text="DNI" />
-            <MenuItem mnemonicParsing="false" text="LC" />
-            <MenuItem mnemonicParsing="false" text="PASSPORT" />
-        </items>
-      </MenuButton>
-      <Label layoutX="165.0" layoutY="95.0" text="Number" />
-      <TextField layoutX="211.0" layoutY="91.0" />
-      <TextField layoutX="14.0" layoutY="138.0" prefHeight="23.0" prefWidth="155.0" />
-      <TextField layoutX="195.0" layoutY="138.0" prefHeight="23.0" prefWidth="164.0" />
-      <Button layoutX="277.0" layoutY="179.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Send Client" />
-      <Label layoutX="14.0" layoutY="123.0" text="Name" />
-      <Label layoutX="195.0" layoutY="123.0" text="Address" />
-      <CheckBox fx:id="cbBill" layoutX="8.0" layoutY="30.0" mnemonicParsing="false" text="Bill" />
-      <CheckBox fx:id="cbReceipt" layoutX="97.0" layoutY="30.0" mnemonicParsing="false" text="Receipt" />
-      <CheckBox fx:id="cbDebitNote" layoutX="190.0" layoutY="30.0" mnemonicParsing="false" text="Debit Note" />
-      <CheckBox fx:id="cbCreditNote" layoutX="277.0" layoutY="30.0" mnemonicParsing="false" text="Credit Note" />
+      <Label layoutX="194.0" layoutY="87.0" text="Number" />
+      <TextField fx:id="tfNumber" layoutX="195.0" layoutY="104.0" prefHeight="25.0" prefWidth="164.0" />
+      <TextField fx:id="tfName" layoutX="10.0" layoutY="146.0" prefHeight="25.0" prefWidth="164.0" />
+      <TextField fx:id="tfAddress" layoutX="195.0" layoutY="146.0" prefHeight="23.0" prefWidth="164.0" />
+      <Button layoutX="277.0" layoutY="179.0" mnemonicParsing="false" onAction="#actionSendClient" prefHeight="25.0" prefWidth="83.0" text="Send Client" />
+      <Label layoutX="10.0" layoutY="131.0" text="Name" />
+      <Label layoutX="195.0" layoutY="131.0" text="Address" />
+      <CheckBox fx:id="cbBill" layoutX="11.0" layoutY="14.0" mnemonicParsing="false" text="Bill" />
+      <CheckBox fx:id="cbReceipt" layoutX="100.0" layoutY="14.0" mnemonicParsing="false" text="Receipt" />
+      <CheckBox fx:id="cbDebitNote" layoutX="193.0" layoutY="14.0" mnemonicParsing="false" text="Debit Note" />
+      <CheckBox fx:id="cbCreditNote" layoutX="280.0" layoutY="14.0" mnemonicParsing="false" text="Credit Note" />
+      <ChoiceBox fx:id="cbType" layoutX="10.0" layoutY="56.0" prefHeight="25.0" prefWidth="164.0" />
+      <Label layoutX="12.0" layoutY="39.0" text="Type" />
+      <Label layoutX="194.0" layoutY="39.0" text="Condition Tax" />
+      <ChoiceBox fx:id="cbDocument" layoutX="10.0" layoutY="104.0" prefHeight="25.0" prefWidth="164.0" />
+      <Label layoutX="11.0" layoutY="87.0" text="Document" />
+      <ChoiceBox fx:id="cbConditionTax" layoutX="192.0" layoutY="56.0" prefHeight="25.0" prefWidth="164.0" />
    </children>
 </Pane>
